cmake_minimum_required(VERSION 2.8)

#ADD_DEFINITIONS(
#    -std=c++11 # Or -std=c++0x
    # Other flags
#)



#set(TwoSum TwoSum.cpp )
#add_executable(TwoSum ${TwoSum} )

set(chain_multiplication chain_multiplication.cpp )
add_executable(chain_multiplication ${chain_multiplication} )

set(longest_common_subsequence longest_common_subsequence.cpp )
add_executable(longest_common_subsequence ${longest_common_subsequence} )

